--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "type": "git",
     "url": "git+https://github.com/alane019/pwa-budget-tracker"
   },
-  "author": "",
+  "author": "trilogy-adam-l",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alane019/pwa-budget-tracker"
+  },
+  "engines": {
+	"node": "14.x"
   },
   "homepage": "https://github.com/alane019/pwa-budget-tracker",
   "dependencies": {
