update package.json app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "budget-app",
+  "name": "pwa-budget-tracker-03022021",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
